--- a/static/css/textPage.css
+++ b/static/css/textPage.css
@@ -144,3 +144,12 @@ button:active {
             font-size: 1.1rem;
             color: #222;
         }
+
+         .result-text {
+            background-color: #f9f9f9;
+            padding: 10px;
+            white-space: pre-wrap; /* păstrează spațiile și newline-urile */
+            border: 1px solid #ddd;
+            font-family: monospace;
+            margin-top: 20px;
+        }
